# ==============================================================================
# FTGL CMake File
# ==============================================================================

INCLUDE_DIRECTORIES(ftgl SYSTEM)

# include subdirectories -------------------------------------------------------
ADD_SUBDIRECTORY(ftgl)

